# etl_project

./: app.py  main.py  pyproject.toml  readme.md  requirements.txt
configs/: config.yaml
data/: customers.xlsx  employee.xlsx  inventory.xlsx  orders.xlsx  product.xlsx
src/etl_project/: configs.py  logger.py  reader.py
