[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]

name = "ETL-project"
version = "0.0.1"
description = "ETL_project for learning Python Production"
readme = "README.md"
requires-python = ">= 3.14"
authors = [{name = "Mohd Talib"}]
dependencies = [
    "numpy >=2.5.1",
    "pandas>=3.0.3",
    "python-dateutil>=2.9.0.post0",
    "six>=1.17.0",
    "tzdata>=2026.3",
]


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]